src/main/antlr/.antlr/ChainRuleParser.java
// Generated from /Users/artembobrov/Documents/masters/call-chain/src/main/antlr/ChainRuleParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ChainRuleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAP=1, FILTER=2, CONSTANT=3, ELEMENT=4, LCUR=5, RCUR=6, LPAR=7, RPAR=8, 
		PLUS=9, MINUS=10, TIMES=11, GT=12, LT=13, EQ=14, AND=15, OR=16, COMPOSITION=17, 
		WS=18;
	public static final int
		RULE_program = 0, RULE_callChain = 1, RULE_call = 2, RULE_mapCall = 3, 
		RULE_filterCall = 4, RULE_expression = 5, RULE_binaryBitwiseAndExpression = 6, 
		RULE_binaryEqualityExpression = 7, RULE_binaryRelationalExpression = 8, 
		RULE_binaryPlusMinusExpression = 9, RULE_binaryTimesExpression = 10, RULE_signedAtom = 11, 
		RULE_atom = 12, RULE_parenthesizedExpression = 13, RULE_constant = 14, 
		RULE_element = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "callChain", "call", "mapCall", "filterCall", "expression", 
			"binaryBitwiseAndExpression", "binaryEqualityExpression", "binaryRelationalExpression", 
			"binaryPlusMinusExpression", "binaryTimesExpression", "signedAtom", "atom", 
			"parenthesizedExpression", "constant", "element"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'map'", "'filter'", null, "'element'", "'{'", "'}'", "'('", "')'", 
			"'+'", "'-'", "'*'", "'>'", "'<'", "'='", "'&'", "'|'", "'%>%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MAP", "FILTER", "CONSTANT", "ELEMENT", "LCUR", "RCUR", "LPAR", 
			"RPAR", "PLUS", "MINUS", "TIMES", "GT", "LT", "EQ", "AND", "OR", "COMPOSITION", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ChainRuleParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ChainRuleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public CallChainContext callChain() {
			return getRuleContext(CallChainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ChainRuleParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			callChain();
			setState(33);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallChainContext extends ParserRuleContext {
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public TerminalNode COMPOSITION() { return getToken(ChainRuleParser.COMPOSITION, 0); }
		public CallChainContext callChain() {
			return getRuleContext(CallChainContext.class,0);
		}
		public CallChainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callChain; }
	}

	public final CallChainContext callChain() throws RecognitionException {
		CallChainContext _localctx = new CallChainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_callChain);
		try {
			setState(40);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(35);
				call();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(36);
				call();
				setState(37);
				match(COMPOSITION);
				setState(38);
				callChain();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallContext extends ParserRuleContext {
		public MapCallContext mapCall() {
			return getRuleContext(MapCallContext.class,0);
		}
		public FilterCallContext filterCall() {
			return getRuleContext(FilterCallContext.class,0);
		}
		public CallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_call; }
	}

	public final CallContext call() throws RecognitionException {
		CallContext _localctx = new CallContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_call);
		try {
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MAP:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				mapCall();
				}
				break;
			case FILTER:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				filterCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapCallContext extends ParserRuleContext {
		public TerminalNode MAP() { return getToken(ChainRuleParser.MAP, 0); }
		public TerminalNode LCUR() { return getToken(ChainRuleParser.LCUR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RCUR() { return getToken(ChainRuleParser.RCUR, 0); }
		public MapCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mapCall; }
	}

	public final MapCallContext mapCall() throws RecognitionException {
		MapCallContext _localctx = new MapCallContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mapCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(MAP);
			setState(47);
			match(LCUR);
			setState(48);
			expression();
			setState(49);
			match(RCUR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterCallContext extends ParserRuleContext {
		public TerminalNode FILTER() { return getToken(ChainRuleParser.FILTER, 0); }
		public TerminalNode LCUR() { return getToken(ChainRuleParser.LCUR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RCUR() { return getToken(ChainRuleParser.RCUR, 0); }
		public FilterCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filterCall; }
	}

	public final FilterCallContext filterCall() throws RecognitionException {
		FilterCallContext _localctx = new FilterCallContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_filterCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(FILTER);
			setState(52);
			match(LCUR);
			setState(53);
			expression();
			setState(54);
			match(RCUR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public List<BinaryBitwiseAndExpressionContext> binaryBitwiseAndExpression() {
			return getRuleContexts(BinaryBitwiseAndExpressionContext.class);
		}
		public BinaryBitwiseAndExpressionContext binaryBitwiseAndExpression(int i) {
			return getRuleContext(BinaryBitwiseAndExpressionContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(ChainRuleParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(ChainRuleParser.OR, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			binaryBitwiseAndExpression();
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(57);
				match(OR);
				setState(58);
				binaryBitwiseAndExpression();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinaryBitwiseAndExpressionContext extends ParserRuleContext {
		public List<BinaryEqualityExpressionContext> binaryEqualityExpression() {
			return getRuleContexts(BinaryEqualityExpressionContext.class);
		}
		public BinaryEqualityExpressionContext binaryEqualityExpression(int i) {
			return getRuleContext(BinaryEqualityExpressionContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(ChainRuleParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(ChainRuleParser.AND, i);
		}
		public BinaryBitwiseAndExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryBitwiseAndExpression; }
	}

	public final BinaryBitwiseAndExpressionContext binaryBitwiseAndExpression() throws RecognitionException {
		BinaryBitwiseAndExpressionContext _localctx = new BinaryBitwiseAndExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_binaryBitwiseAndExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			binaryEqualityExpression();
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(65);
				match(AND);
				setState(66);
				binaryEqualityExpression();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinaryEqualityExpressionContext extends ParserRuleContext {
		public List<BinaryRelationalExpressionContext> binaryRelationalExpression() {
			return getRuleContexts(BinaryRelationalExpressionContext.class);
		}
		public BinaryRelationalExpressionContext binaryRelationalExpression(int i) {
			return getRuleContext(BinaryRelationalExpressionContext.class,i);
		}
		public List<TerminalNode> EQ() { return getTokens(ChainRuleParser.EQ); }
		public TerminalNode EQ(int i) {
			return getToken(ChainRuleParser.EQ, i);
		}
		public BinaryEqualityExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryEqualityExpression; }
	}

	public final BinaryEqualityExpressionContext binaryEqualityExpression() throws RecognitionException {
		BinaryEqualityExpressionContext _localctx = new BinaryEqualityExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_binaryEqualityExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			binaryRelationalExpression();
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EQ) {
				{
				{
				setState(73);
				match(EQ);
				setState(74);
				binaryRelationalExpression();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinaryRelationalExpressionContext extends ParserRuleContext {
		public List<BinaryPlusMinusExpressionContext> binaryPlusMinusExpression() {
			return getRuleContexts(BinaryPlusMinusExpressionContext.class);
		}
		public BinaryPlusMinusExpressionContext binaryPlusMinusExpression(int i) {
			return getRuleContext(BinaryPlusMinusExpressionContext.class,i);
		}
		public List<TerminalNode> LT() { return getTokens(ChainRuleParser.LT); }
		public TerminalNode LT(int i) {
			return getToken(ChainRuleParser.LT, i);
		}
		public List<TerminalNode> GT() { return getTokens(ChainRuleParser.GT); }
		public TerminalNode GT(int i) {
			return getToken(ChainRuleParser.GT, i);
		}
		public BinaryRelationalExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryRelationalExpression; }
	}

	public final BinaryRelationalExpressionContext binaryRelationalExpression() throws RecognitionException {
		BinaryRelationalExpressionContext _localctx = new BinaryRelationalExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_binaryRelationalExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			binaryPlusMinusExpression();
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==GT || _la==LT) {
				{
				{
				setState(81);
				_la = _input.LA(1);
				if ( !(_la==GT || _la==LT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(82);
				binaryPlusMinusExpression();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinaryPlusMinusExpressionContext extends ParserRuleContext {
		public List<BinaryTimesExpressionContext> binaryTimesExpression() {
			return getRuleContexts(BinaryTimesExpressionContext.class);
		}
		public BinaryTimesExpressionContext binaryTimesExpression(int i) {
			return getRuleContext(BinaryTimesExpressionContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(ChainRuleParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(ChainRuleParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(ChainRuleParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(ChainRuleParser.MINUS, i);
		}
		public BinaryPlusMinusExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryPlusMinusExpression; }
	}

	public final BinaryPlusMinusExpressionContext binaryPlusMinusExpression() throws RecognitionException {
		BinaryPlusMinusExpressionContext _localctx = new BinaryPlusMinusExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_binaryPlusMinusExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			binaryTimesExpression();
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS || _la==MINUS) {
				{
				{
				setState(89);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(90);
				binaryTimesExpression();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BinaryTimesExpressionContext extends ParserRuleContext {
		public List<SignedAtomContext> signedAtom() {
			return getRuleContexts(SignedAtomContext.class);
		}
		public SignedAtomContext signedAtom(int i) {
			return getRuleContext(SignedAtomContext.class,i);
		}
		public List<TerminalNode> TIMES() { return getTokens(ChainRuleParser.TIMES); }
		public TerminalNode TIMES(int i) {
			return getToken(ChainRuleParser.TIMES, i);
		}
		public BinaryTimesExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_binaryTimesExpression; }
	}

	public final BinaryTimesExpressionContext binaryTimesExpression() throws RecognitionException {
		BinaryTimesExpressionContext _localctx = new BinaryTimesExpressionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_binaryTimesExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			signedAtom();
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TIMES) {
				{
				{
				setState(97);
				match(TIMES);
				setState(98);
				signedAtom();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignedAtomContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(ChainRuleParser.PLUS, 0); }
		public SignedAtomContext signedAtom() {
			return getRuleContext(SignedAtomContext.class,0);
		}
		public TerminalNode MINUS() { return getToken(ChainRuleParser.MINUS, 0); }
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public SignedAtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signedAtom; }
	}

	public final SignedAtomContext signedAtom() throws RecognitionException {
		SignedAtomContext _localctx = new SignedAtomContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_signedAtom);
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PLUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				match(PLUS);
				setState(105);
				signedAtom();
				}
				break;
			case MINUS:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				match(MINUS);
				setState(107);
				signedAtom();
				}
				break;
			case CONSTANT:
			case ELEMENT:
			case LPAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				atom();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public ParenthesizedExpressionContext parenthesizedExpression() {
			return getRuleContext(ParenthesizedExpressionContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_atom);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ELEMENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				element();
				}
				break;
			case CONSTANT:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				constant();
				}
				break;
			case LPAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				parenthesizedExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParenthesizedExpressionContext extends ParserRuleContext {
		public TerminalNode LPAR() { return getToken(ChainRuleParser.LPAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(ChainRuleParser.RPAR, 0); }
		public ParenthesizedExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parenthesizedExpression; }
	}

	public final ParenthesizedExpressionContext parenthesizedExpression() throws RecognitionException {
		ParenthesizedExpressionContext _localctx = new ParenthesizedExpressionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_parenthesizedExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(LPAR);
			setState(117);
			expression();
			setState(118);
			match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public TerminalNode CONSTANT() { return getToken(ChainRuleParser.CONSTANT, 0); }
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_constant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(CONSTANT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public TerminalNode ELEMENT() { return getToken(ChainRuleParser.ELEMENT, 0); }
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_element);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(ELEMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}